<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Currency Converter</string>
    <string name="action_settings">Settings</string>

    //Main activity text
    <string name="activity_title">Currency Converter</string>
    <string name="input_value">From</string>
    <string name="output_value">To</string>
    <string name="result_value">Result</string>

    //Main activity buttons
    <string name="input_btn">Change from</string>
    <string name="output_btn">Change to</string>
    <string name="convert_btn">Convert Currency</string>

    //Main activity spinner choices
    <string name="currency_prompt">Choose a currency</string>
    <string-array name="currency_array">
        <item>AUD</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>INR</item>
        <item>JPY</item>
    </string-array>


</resources>
